--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
-<app-product-list></app-product-list>
-<app-product-detail></app-product-detail>
-<app-product-edit></app-product-edit>
+<a href="">list</a>
+<a href="">detail</a>
+<a href="">edit</a>
+
+<router-outlet></router-outlet>
+
+<!--<app-product-list></app-product-list>-->
+<!--<app-product-detail></app-product-detail>-->
+<!--<app-product-edit></app-product-edit>-->
