links and routes works

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<a href="">list</a>
-<a href="">detail</a>
-<a href="">edit</a>
+<a [routerLink]="['/list']">list</a>
+<a [routerLink]="['/detail']">detail</a>
+<a [routerLink]="['/edit']">edit</a>
 
 <router-outlet></router-outlet>
 
