detail get properly item

--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -1,3 +1,6 @@
 <p>
   product-detail works!
 </p>
+<p>
+  product with {{product.id}} - {{product.title}} - {{product.description}} - {{product.price}}!
+</p>
