added some buttons

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <a [routerLink]="['/list']">list</a>
-<a [routerLink]="['/edit']">edit</a>
+<a [routerLink]="['/edit']">add</a>
 
 <router-outlet></router-outlet>
 
