--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -4,3 +4,5 @@
 <p>
   product with {{product.id}} - {{product.title}} - {{product.description}} - {{product.price}}!
 </p>
+<button (click)="onGoBack()">back</button>
+<button (click)="onDelete()">delete</button>
