--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -2,7 +2,7 @@
   product-detail works!
 </p>
 <p>
-  product with {{product.id}} - {{product.title}} - {{product.description}} - {{product.price}}!
+  product with {{product.image}} - {{product.id}} - {{product.title}} - {{product.description}} - {{product.price}}!
 </p>
 <button (click)="onGoBack()">back</button>
 <button (click)="onDelete()">delete</button>
