--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -5,7 +5,7 @@
     desc: {{product.description}}
     price: {{product.price}}
     <button (click)="onDetail(product.id)">detail</button>
-    <button (click)="onEdit()">edit</button>
+    <button (click)="onEdit(product.id)">edit</button>
     <button (click)="onDelete(product)">delete</button>
   </li>
 </ul>
