--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,6 +1,7 @@
 <ul>
   <li *ngFor="let product of products">
     id: {{product.id}}
+    id: {{product.image}}
     title: {{product.title}}
     desc: {{product.description}}
     price: {{product.price}}
