--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -1,5 +1,5 @@
 <p>
-  product-detail works!
+  <img src="{{product.image}}">
 </p>
 <p>
   product with {{product.image}} - {{product.id}} - {{product.title}} - {{product.description}} - {{product.price}}!
