--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,12 +1,13 @@
 <ul>
   <li *ngFor="let product of products">
-    id: {{product.id}}
-    id: {{product.image}}
-    title: {{product.title}}
-    desc: {{product.description}}
-    price: {{product.price}}
-    <button (click)="onDetail(product.id)">detail</button>
-    <button (click)="onEdit(product.id)">edit</button>
-    <button (click)="onDelete(product)">delete</button>
+    <div>
+      title: {{product.title}}
+    </div>
+    <div>
+      price: {{product.price}}
+    </div>
+    <!--<button (click)="onDetail(product.id)">detail</button>-->
+    <!--<button (click)="onEdit(product.id)">edit</button>-->
+    <!--<button (click)="onDelete(product)">delete</button>-->
   </li>
 </ul>
