--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <h1>
       <a [routerLink]="['/list']">{{title}}</a>
     </h1>
-    <a [routerLink]="['/add']">add</a>
+    <a [routerLink]="['/add']" class="btn">add</a>
   </header>
   <div class="content">
     <router-outlet></router-outlet>
