--- a/src/styles.css
+++ b/src/styles.css
@@ -10,11 +10,7 @@ body {
   justify-content: flex-start;
   align-items: center;
 
-  border: 1px solid red;
-}
-
-.content {
-  width: 100%;
+  /*border: 1px solid red;*/
 }
 
 header {
@@ -24,7 +20,11 @@ header {
   justify-content: space-between;
   align-items: center;
 
-  border: 1px solid blue;
+  /*border: 1px solid blue;*/
+}
+
+.content {
+  width: 100%;
 }
 
 a {
@@ -32,7 +32,8 @@ a {
 }
 
 ul {
-  border: 1px solid green;
+  /*border: 1px solid green;*/
+
   list-style: none;
   margin: 0;
   padding: 0;
