--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,6 @@
 <div class="container">
   <header>
-    <h1>
-      <a [routerLink]="['/list']">{{title}}</a>
-    </h1>
+      <a [routerLink]="['/list']" class="btn">{{title}}</a>
     <a [routerLink]="['/add']" class="btn">add</a>
   </header>
   <div class="content">
