--- a/src/app/product-detail/product-detail.component.css
+++ b/src/app/product-detail/product-detail.component.css
@@ -31,13 +31,18 @@
   margin-top: 0;
 }
 
-.btn {
-  margin: 5px;
-  background-color: #fff;
-  border: #007CBB 1px solid;
-  color: #007CBB;
-  text-transform: uppercase;
-  padding: .5rem 2rem;
-  border-radius: 5px;
-}
+/*.btn {*/
+  /*margin: 5px;*/
+  /*background-color: #fff;*/
+  /*border: #007CBB 1px solid;*/
+  /*color: #007CBB;*/
+  /*text-transform: uppercase;*/
+  /*padding: .5rem 2rem;*/
+  /*border-radius: 5px;*/
+  /*transition: 0.2s;*/
+/*}*/
+
+/*.btn:hover {*/
+  /*background-color: #E1F1F6;*/
+/*}*/
 
