--- a/src/styles.css
+++ b/src/styles.css
@@ -54,3 +54,18 @@ li:hover,
 li:active {
   box-shadow: 0 4px 5px #ccc;
 }
+
+.btn {
+  margin: 5px;
+  background-color: #fff;
+  border: #007CBB 1px solid;
+  color: #007CBB;
+  text-transform: uppercase;
+  padding: .5rem 2rem;
+  border-radius: 5px;
+  transition: 0.2s;
+}
+
+.btn:hover {
+  background-color: #E1F1F6;
+}
