--- a/src/app/product-edit/product-edit.component.html
+++ b/src/app/product-edit/product-edit.component.html
@@ -6,7 +6,8 @@
              id="addImage"
              placeholder="add link to img"
              ngModel
-             name="image">
+             name="image"
+      >
     </div>
 
     <div>
@@ -89,7 +90,7 @@
     <div>
       <button (click)="onDelete()" class="btn">delete</button>
       <button (click)="onGoBack()" class="btn">back</button>
-      <button type="submit" class="btn">edit</button>
+      <button type="submit" class="btn">add</button>
     </div>
   </form>
 
