--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,6 +1,6 @@
 <ul>
   <li *ngFor="let product of products" (click)="onDetail(product.id)">
-    <div>
+    <div class="title">
       {{product.title}}
     </div>
     <div>
