add Product model

--- a/src/app/product-edit/product-edit.component.html
+++ b/src/app/product-edit/product-edit.component.html
@@ -90,7 +90,7 @@
     <div>
       <button (click)="onDelete()" class="btn">delete</button>
       <button (click)="onGoBack()" class="btn">back</button>
-      <button type="submit" class="btn">add</button>
+      <button type="submit" class="btn">save</button>
     </div>
   </form>
 
