--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -4,7 +4,7 @@
       {{product.title}}
     </div>
     <div>
-      ${{product.price}}
+      <strong>$</strong>{{product.price}}
     </div>
     <!--<button (click)="onDetail(product.id)">detail</button>-->
     <!--<button (click)="onEdit(product.id)">edit</button>-->
