--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,9 @@
   <div class="content">
     <router-outlet></router-outlet>
   </div>
+  <button class="btn left" (click)="onReset()">
+    reset localStorage
+  </button>
 </div>
 
 
