--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,9 +6,12 @@
   <div class="content">
     <router-outlet></router-outlet>
   </div>
-  <button class="btn left" (click)="onReset()">
-    reset localStorage
-  </button>
+  <footer>
+    <button class="btn" (click)="onReset()">
+      reset localStorage
+    </button>
+  </footer>
+
 </div>
 
 
