--- a/src/styles.css
+++ b/src/styles.css
@@ -10,8 +10,6 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-
-  /*border: 1px solid red;*/
 }
 
 header {
@@ -20,8 +18,13 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
 
-  /*border: 1px solid blue;*/
+footer {
+  margin: 1em;
+  width: 95%;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .content {
@@ -33,8 +36,6 @@ a {
 }
 
 ul {
-  /*border: 1px solid green;*/
-
   list-style: none;
   margin: 0;
   padding: 0;
