input type number validation fix

--- a/src/app/product-edit/product-edit.component.html
+++ b/src/app/product-edit/product-edit.component.html
@@ -47,7 +47,7 @@
 
 
     <div>
-      <input type="text"
+      <input type="number"
              size="10"
              id="addPrice"
              placeholder="add price here"
@@ -102,7 +102,7 @@
               name="description"></textarea>
     </div>
     <div>
-      <input type="text"
+      <input type="number"
              size="10"
              id="editPrice"
              placeholder="add price here"
