--- a/src/styles.css
+++ b/src/styles.css
@@ -16,6 +16,7 @@ header {
   margin: 1em;
   width: 95%;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
 }
