--- a/src/app/product-edit/product-edit.component.html
+++ b/src/app/product-edit/product-edit.component.html
@@ -1,40 +1,37 @@
-<div class="product">
+<form (ngSubmit)="onSubmit()" #f="ngForm" *ngIf="!editMode" class="product">
+  <div>
+    <label>Image</label>
+    <input type="text"
+           size="50"
+           id="addImage"
+           placeholder="add link to img"
+           [(ngModel)]="image"
+           name="image"
+           required
+    >
+  </div>
 
+  <div>
+    <img [src]="image"
+         (load)="onImageLoad($event)"
+         (error)="onImageLoadError($event)"
+    >
+    <img src="{{wrongImageLink}}" *ngIf="!imageLoaded">
+  </div>
 
-  <form (ngSubmit)="onSubmit()" #f="ngForm" *ngIf="!editMode">
-    <div>
-      <label>Image</label>
-      <input type="text"
-             size="50"
-             id="addImage"
-             placeholder="add link to img"
-             [(ngModel)]="image"
-             name="image"
-             required
-      >
-    </div>
+  <div>
+    <input type="text"
+           size="50"
+           id="addTitle"
+           placeholder="add title here"
+           ngModel
+           name="title"
+           required
+           #title="ngModel">
+  </div>
+  <span *ngIf="!title.valid && title.touched">enter title please</span>
 
-    <div>
-      <img [src]="image"
-           (load)="onImageLoad($event)"
-           (error)="onImageLoadError($event)"
-      >
-      <img src="{{wrongImageLink}}" *ngIf="!imageLoaded">
-    </div>
-
-    <div>
-      <input type="text"
-             size="50"
-             id="addTitle"
-             placeholder="add title here"
-             ngModel
-             name="title"
-             required
-             #title="ngModel">
-    </div>
-    <span *ngIf="!title.valid && title.touched">enter title please</span>
-
-    <div>
+  <div>
   <textarea id="addDescription"
             rows="10"
             placeholder="add description here"
@@ -42,78 +39,76 @@
             name="description"
             required
             #desc="ngModel"></textarea>
-    </div>
-    <span *ngIf="!desc.valid && desc.touched">enter description please</span>
+  </div>
+  <span *ngIf="!desc.valid && desc.touched">enter description please</span>
 
+  <div>
+    <input type="number"
+           size="10"
+           id="addPrice"
+           placeholder="add price here"
+           ngModel
+           name="price"
+           required
+           #price="ngModel">
+  </div>
+  <span *ngIf="!price.valid && price.touched">enter price please</span>
 
-    <div>
-      <input type="number"
-             size="10"
-             id="addPrice"
-             placeholder="add price here"
-             ngModel
-             name="price"
-             required
-             #price="ngModel">
-    </div>
-    <span *ngIf="!price.valid && price.touched">enter price please</span>
+  <div>
+    <button type="submit" class="btn"
+            [disabled]="!f.valid">add
+    </button>
+    <button (click)="onGoBack()" class="btn">back</button>
+  </div>
+</form>
 
+<form (ngSubmit)="onSubmit()" #f="ngForm" *ngIf="editMode" class="product">
+  <div>
+    <input type="text"
+           size="50"
+           id="editImage"
+           placeholder="add link to img"
+           [(ngModel)]="product.image"
+           name="image">
+  </div>
 
-    <div>
-      <button type="submit" class="btn"
-              [disabled]="!f.valid">add
-      </button>
-      <button (click)="onGoBack()" class="btn">back</button>
-    </div>
-  </form>
+  <div>
+    <img [src]="product.image"
+         (load)="onImageLoad($event)"
+         (error)="onImageLoadError($event)"
+    >
+    <img src="{{wrongImageLink}}" *ngIf="!imageLoaded">
+  </div>
 
-  <form (ngSubmit)="onSubmit()" #f="ngForm" *ngIf="editMode">
-    <div>
-      <input type="text"
-             size="50"
-             id="editImage"
-             placeholder="add link to img"
-             [(ngModel)]="product.image"
-             name="image">
-    </div>
+  <div>
+    <input type="text"
+           size="50"
+           id="editTitle"
+           placeholder="add title here"
+           [ngModel]="product.title"
+           name="title">
+  </div>
 
-    <div>
-      <img [src]="product.image"
-           (load)="onImageLoad($event)"
-           (error)="onImageLoadError($event)"
-      >
-      <img src="{{wrongImageLink}}" *ngIf="!imageLoaded">
-    </div>
-
-
-    <div>
-      <input type="text"
-             size="50"
-             id="editTitle"
-             placeholder="add title here"
-             [ngModel]="product.title"
-             name="title">
-    </div>
-    <div>
+  <div>
     <textarea id="editDescription"
               rows="10"
               placeholder="add description here"
               [ngModel]="product.description"
               name="description"></textarea>
-    </div>
-    <div>
-      <input type="number"
-             size="10"
-             id="editPrice"
-             placeholder="add price here"
-             [ngModel]="product.price"
-             name="price">
-    </div>
-    <div>
-      <button (click)="onDelete()" class="btn">delete</button>
-      <button (click)="onGoBack()" class="btn">back</button>
-      <button type="submit" class="btn">save</button>
-    </div>
-  </form>
+  </div>
 
-</div>
+  <div>
+    <input type="number"
+           size="10"
+           id="editPrice"
+           placeholder="add price here"
+           [ngModel]="product.price"
+           name="price">
+  </div>
+
+  <div>
+    <button (click)="onDelete()" class="btn">delete</button>
+    <button (click)="onGoBack()" class="btn">back</button>
+    <button type="submit" class="btn">save</button>
+  </div>
+</form>
