--- a/src/app/product-edit/product-edit.component.html
+++ b/src/app/product-edit/product-edit.component.html
@@ -56,7 +56,7 @@
 
   <div>
     <button type="submit" class="btn"
-            [disabled]="!f.valid">add
+            [disabled]="!f.valid || !imageLoaded">add
     </button>
     <button (click)="onGoBack()" class="btn">back</button>
   </div>
