--- a/src/app/product-edit/product-edit.component.html
+++ b/src/app/product-edit/product-edit.component.html
@@ -69,7 +69,9 @@
            id="editImage"
            placeholder="add link to img"
            [(ngModel)]="product.image"
-           name="image">
+           name="image"
+           required
+    >
   </div>
 
   <div>
@@ -86,16 +88,25 @@
            id="editTitle"
            placeholder="add title here"
            [ngModel]="product.title"
-           name="title">
+           name="title"
+           #title="ngModel"
+           required
+    >
   </div>
+  <span *ngIf="!title.valid && title.touched">enter title please</span>
+
 
   <div>
     <textarea id="editDescription"
               rows="10"
               placeholder="add description here"
               [ngModel]="product.description"
-              name="description"></textarea>
+              name="description"
+              #desc="ngModel"
+              required
+    ></textarea>
   </div>
+  <span *ngIf="!desc.valid && desc.touched">enter title please</span>
 
   <div>
     <input type="number"
@@ -103,12 +114,17 @@
            id="editPrice"
            placeholder="add price here"
            [ngModel]="product.price"
-           name="price">
+           name="price"
+           #price="ngModel"
+           required
+    >
   </div>
+  <span *ngIf="!price.valid && price.touched">enter title please</span>
 
   <div>
     <button (click)="onDelete()" class="btn">delete</button>
     <button (click)="onGoBack()" class="btn">back</button>
-    <button type="submit" class="btn">save</button>
+    <button type="submit" class="btn"
+            [disabled]="!f.valid || !imageLoaded">save</button>
   </div>
 </form>
